# epitech_second_years

arcade/: Makefile
arcade/include/: core.hpp  graphic.hpp  weigh.hpp
arcade/source/: core.cpp  main.cpp  weigh.cpp
docker/: docker-compose.yml
docker/result/: server.js
docker/worker/: Dockerfile  pom.xml
ftp/: Makefile  myftp  sources.mk
ftp/include/: ftp.h
ftp/src/: cmd.c  cmdBis.c  cmdTiers.c  cmd_mana.c  identification.c  login.c  lunch_ftp.c  main.c  str_to_word_array.c
ftrace/: Makefile
ftrace/include/: strace.h  syscall_info.h
ftrace/mk/: source.mk
ftrace/src/: main.c  print_info.c  strace.c
ftrace/tests/: Makefile  a.out  addition.c  main.c
groundhog/: Makefile  groundhog.py
indie/: CMakeCache.txt  CMakeLists.txt  Makefile  bomberman  cmake_install.cmake  main.cpp
indie/include/: Buttons.hpp  GameIntroduction.hpp  Map.hpp  Menu.hpp  Players.hpp  Splash_intro.hpp  Win.hpp
indie/src/: Buttons.cpp  GameIntroduction.cpp  Map.cpp  Menu.cpp  Players.cpp  Splash_intro.cpp  Win.cpp
malloc/: Makefile
malloc/include/: my_malloc.h
malloc/src/: calloc.c  free.c  malloc.c  realloc.c  tools.c
marvin/: my_marvin.yml
marvin/my/: my_marvin.yml  plugins.txt
my_teams/: Makefile  rfc.txt  rfc_doc.txt
my_teams/client/: client.c  init_client.c  login_events.c  main.c  print_users.c
my_teams/include/: client.h  lib.h  server.h
my_teams/lib/: get_client_fd.c  get_user_index.c  init_list.c  my_flags.c  (+7 more)
nano/: Makefile  main.cpp  nanotekspice
nasm/: Makefile  main.c
nm/: 32a.out  64a.out  Makefile
strace/: strace
trade/: Makefile
(+84 files in other folders)
